--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Allow .lib & .dll
+!*.lib
+!*.dll
+!*/
+
 # User-specific files
 *.rsuser
 *.suo
