--- a/Himinn_Engine/QBert/QBert.vcxproj.filters
+++ b/Himinn_Engine/QBert/QBert.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Components">
       <UniqueIdentifier>{1b938bbb-a01d-4d8f-84cf-d735f3dcfd53}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Commands">
+      <UniqueIdentifier>{44b2a487-fa33-4f12-b6eb-5e0a30660e4d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="QBert.cpp">
@@ -33,6 +36,12 @@
     <ClCompile Include="GridComponent.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="CharacterComponent.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Commands.cpp">
+      <Filter>Commands</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -43,6 +52,12 @@
     </ClInclude>
     <ClInclude Include="GridComponent.h">
       <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="CharacterComponent.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Commands.h">
+      <Filter>Commands</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
