Added Lifts & Changing Nodes
Lifts where added to the game. Lifts float to the sides of the level, allowing you to fly back to the top without losing a life.
Upon jumping on top of a new node, the node will now "level up". the goal is to max out every node. (The game doesn't detect a completed board yet)

--- a/Himinn_Engine/QBert/QBert.vcxproj
+++ b/Himinn_Engine/QBert/QBert.vcxproj
@@ -178,6 +178,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClCompile Include="Commands.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GridComponent.cpp" />
+    <ClCompile Include="LiftComponent.cpp" />
     <ClCompile Include="NodeComponent.cpp" />
     <ClCompile Include="CharacterComponent.cpp" />
     <ClCompile Include="QBert.cpp" />
@@ -186,6 +187,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClInclude Include="Commands.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GridComponent.h" />
+    <ClInclude Include="LiftComponent.h" />
     <ClInclude Include="NodeComponent.h" />
     <ClInclude Include="CharacterComponent.h" />
   </ItemGroup>
