--- a/Himinn_Engine/QBert/QBert.vcxproj
+++ b/Himinn_Engine/QBert/QBert.vcxproj
@@ -176,20 +176,28 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Commands.cpp" />
+    <ClCompile Include="EnemyManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GridComponent.cpp" />
+    <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="LiftComponent.cpp" />
     <ClCompile Include="NodeComponent.cpp" />
     <ClCompile Include="CharacterComponent.cpp" />
+    <ClCompile Include="NodeObserver.cpp" />
+    <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="QBert.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Commands.h" />
+    <ClInclude Include="EnemyManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GridComponent.h" />
+    <ClInclude Include="LevelManager.h" />
     <ClInclude Include="LiftComponent.h" />
     <ClInclude Include="NodeComponent.h" />
     <ClInclude Include="CharacterComponent.h" />
+    <ClInclude Include="NodeObserver.h" />
+    <ClInclude Include="PlayerManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
